# rajeev-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  turbo.json
docs/: ARCHITECTURE-UPDATE-2026.md  SETUP.md  USAGE.md
docs/usage/: APP-SHELL.md  AUTH.md  CAMERA.md  DEEPLINK.md  DOCUMENT.md  EDGE-AI.md  LOCALE.md  MEDIA.md  NETWORK.md  NOTIFY.md  PAYMENTS.md  SYNC.md  UI.md  VAULT.md  VIDEO-EDITOR.md
examples/: CAMPUS-CONNECT.md
examples/android-native-demo/: .gitignore  README.md  settings.gradle.kts
examples/android-native-demo/app/: build.gradle.kts
examples/campus-connect/: App.tsx  README.md  app.json  package.json
examples/campus-connect-android/: MainActivity.kt  README.md  settings.gradle.kts
examples/campus-connect-android/app/: build.gradle.kts
examples/campus-connect-ios/: .gitignore  CampusConnectApp.swift  README.md  project.yml
examples/campus-connect-vanilla/: README.md  index.html
examples/campus-connect-watchos/: README.md  project.yml
examples/campus-connect-web/: README.md  index.html  package.json
examples/expo-demo/: App.tsx  README.md  app.json  metro.config.js  package.json
examples/ios-native-demo/: README.md  project.yml
examples/react-web-demo/: .gitignore  README.md  index.html  package.json
examples/vanilla-web-demo/: README.md  index.html
examples/watchos-demo/: .gitignore  README.md  project.yml
tools/: build-all-ts.js  bump-version.js  prepare-publish.js  publish-all.js  release.js
tools/rust-build/: build-all.sh  build-android.sh  build-ios.sh  build-wasm.sh
(+121 files in other folders)
