[workspace]
resolver = "2"
members = [
    "packages/vault/rust-core",
    "packages/network/rust-core",
    "packages/sync/rust-core",
    "packages/locale/rust-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rajeev Joshi <rajeev02@github.com>"]
license = "MIT"
repository = "https://github.com/Rajeev02/rajeev-sdk"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uniffi = "0.31"
